fix terrible map alignment :) HaHaHa, Watch Harry Potter!

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 }
 
 .glass {
-  background-color: #ffffff60;
+  background-color: #ffffff90;
   backdrop-filter: blur(5px);
 }
 
