--- a/src/screens/AddEstate/AddEstate.css
+++ b/src/screens/AddEstate/AddEstate.css
@@ -4,14 +4,10 @@
   justify-content: center;
   align-items: center;
   max-width: 90vw;
+  max-height: 100wh;
+  height: 100wh;
 }
-
 .add-estate-container {
-  background-image: url("../../images/backgrounds/4.jpg");
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -33,7 +29,7 @@
   padding: 0 15px;
   gap: 10px;
   width: 600px;
-  max-width: 100vw;
+  max-width: 90vw;
 }
 .form-select {
   max-width: 70%;
@@ -45,10 +41,31 @@ label {
   max-width: 90vw;
   width: 400px;
 }
+.map-container {
+  background-color: white;
+  width: 50vw;
+  position: sticky;
+  top: 100px;
+  padding: 10px;
+}
+.main-row {
+  background-image: url("../../images/backgrounds/4.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  max-width: 99.5vw;
+}
 
 @media (max-width: 500px) {
   .add-estate-form {
     flex-direction: column;
     padding: 0;
+  }
+}
+@media (max-width: 1400px) {
+  .map-container {
+    width: 90vw;
+    margin: 40px;
   }
 }
